<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="Add">Add</string>
    <string name="Delete">Delete</string>
    <string name="View">View</string>
    <string name="Update">Update</string>
    <string name="addNameHint">Enter Item Name</string>
    <string name="updateItem">Enter Name of Existing Item</string>
    <string name="addAmountHint">Enter Quantity</string>
    <string name="updateItemAmount">Enter New Quantity</string>
    <string name="addComplete">Add</string>
    <string name="nameHeader">NAME</string>
    <string name="quantityHeader">QUANTITY</string>
    <string name="updatedHeader">LAST UPDATED</string>

</resources>
