<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#2AD8FA">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Input Name:"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/newItemName"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/addNameHint"
        android:inputType="textCapWords"
        android:singleLine="true" >
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Input Amount:"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/newItemAmount"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/addAmountHint"
        android:inputType="number"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/addComplete"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/addComplete" />

</LinearLayout>
