<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header" >
    </ListView>

    <TextView
        android:id="@+id/header"
        android:layout_width="50dip"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#9A9494"
        android:text="@string/nameHeader"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerQuantity"
        android:layout_width="70dip"
        android:layout_height="20dp"
        android:layout_above="@android:id/list"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/header"
        android:background="#9A9494"
        android:text="@string/quantityHeader"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headerUpdated"
        android:layout_width="100dip"
        android:layout_height="20dp"
        android:layout_alignBottom="@+id/headerQuantity"
        android:layout_marginLeft="46dp"
        android:layout_toRightOf="@+id/headerQuantity"
        android:textColor="#000000"
        android:background="#9A9494"
        android:text="@string/updatedHeader" 
        android:textStyle="bold" />

</RelativeLayout>