<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.inventory.MainActivity" >

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/Add" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/Delete" />

    <Button
        android:id="@+id/viewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deleteButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/View" />

    <Button
        android:id="@+id/viewTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewButton"
        android:layout_below="@+id/viewButton"
        android:layout_marginTop="26dp"
        android:text="@string/View" />

</RelativeLayout>
